# bazel-sample

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  project.yml
