load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application", "ios_unit_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:resources.bzl", "apple_resource_bundle")

# Swift Library

tags = ["no-sandbox"]

apple_resource_bundle(
  name = "LibraryResources",
  bundle_name = "Library",
  resources = glob([
    "Library/resources/images.xcassets/**",
  ]),
  tags = tags,
  visibility = ["//visibility:public"],
)

swift_library(
  name = "Library",
  srcs = glob(["Library/srcs/main/src.swift"]),
  data = [":LibraryResources"],
  tags = tags,
  visibility = ["//visibility:public"],
)

apple_resource_bundle(
  name = "LibraryTestResources",
  bundle_name = "LibraryTests",
  resources = glob([
    "Library/resources/images.xcassets/**",
  ]),
  tags = tags,
  visibility = ["//visibility:public"],
)

swift_library(
  name = "LibraryTestLib",
  srcs = glob(["Library/srcs/test/test.swift"]),
  deps = [":Library"],
  data = [":LibraryTestResources"],
  tags = tags,
  visibility = ["//visibility:public"],
)

ios_unit_test(
  name = "LibraryTests",
  deps = [":LibraryTestLib"],
  minimum_os_version = "11.0",
  test_host = "//:HostApp", # Needed to make UIScreen available for snapshots: to be able to obtain the screen size and scale
  tags = tags,
  visibility = ["//visibility:public"],
)

# Host app

swift_library(
  name = "HostAppLib",
  srcs = glob(["Support/AppDelegate.swift"]),
  tags = tags,
  visibility = ["//visibility:public"],
)

ios_application(
  name = "HostApp",
  bundle_id = "HostApp",
  families = ["iphone"],
  infoplists = glob(["Support/Info.plist"]),
  minimum_os_version = "11.0",
  deps = [":HostAppLib"],
  tags = tags,
  visibility = ["//visibility:public"],
)